--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/userdb
 spring.datasource.username=root
 spring.datasource.password=2981999
@@ -12,4 +13,6 @@ spring.mail.username=onedirection19991999@gmail.com
 spring.mail.password=29081999
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+server.port=${PORT:8080}
 
