--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/userdb
-spring.datasource.username=root
-spring.datasource.password=2981999
+
+spring.datasource.url=jdbc:mysql://14.161.47.36:3306/hoyadb
+spring.datasource.username=hoya-fall21
+spring.datasource.password=Jd5aZWBAuYxpmzf:7SGb6(%Ej
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.mail.host=smtp.gmail.com
@@ -14,5 +14,4 @@ spring.mail.password=29081999
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-server.port=${PORT:8080}
 
