--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,6 @@ spring.mail.password=tuan2981999
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-allowed.origin=http://14.161.47.36:8080
+#allowed.origin=http://14.161.47.36:8080
 
 
