--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://14.161.47.36:3306/hoyadb
 spring.datasource.username=hoya-fall21
 spring.datasource.password=Jd5aZWBAuYxpmzf:7SGb6(%Ej
