--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@
 spring.datasource.url=jdbc:mysql://14.161.47.36:3306/hoyadb
 spring.datasource.username=hoya-fall21
 spring.datasource.password=Jd5aZWBAuYxpmzf:7SGb6(%Ej
+#spring.datasource.url=jdbc:mysql://localhost:3306/userdb
+#spring.datasource.username=root
+#spring.datasource.password=08101999
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
