--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=tuanbpse130246@fpt.edu.vn
-spring.mail.password=tuan2981999
+spring.mail.username=hoyaplantvietnam@gmail.com
+spring.mail.password=Tuan2908
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
